Fix navbar spacings to custom and search panel

--- a/app/sass/_general.scss
+++ b/app/sass/_general.scss
@@ -9,6 +9,13 @@ main {
   font-weight: 700;
 }
 
+.navbar-spacing {
+  padding-left: 21px;
+  padding-right: 2.5rem;
+  padding-top: 1.5rem;
+  padding-bottom: 23px;
+}
+
 .py-25 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
